# xo-mesa

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  run.cmd  run.sh  vite.config.ts
.github/workflows/: build.yml
docs/: activity-api.md  cross-platform.md  deep-research.md  graph-and-preview-optimizations.md  keyboard-navigation.md  live-graph.md  live-preview-editing.md  pdf-editing.md  pdf-stirling-assessment.md  pi-agent.md  saved-html.md  security.md  sync.md  tasks-kanban.md  vault-safety.md
scripts/: dev.mjs
src/: App.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: harness-reporter.js  mesa-activity.ts  mesa-browser.ts  mesa-deep-research.ts  mesa-goal.ts
src-tauri/src/: activity.rs  browse.rs  harness.rs  lib.rs  main.rs  sync.rs  sync_core.rs  terminal.rs
src/components/: AgentPanel.tsx  Backlinks.tsx  BookmarksList.tsx  BrowserHarness.tsx  CodeView.tsx  CommandPalette.tsx  ConnectVaultModal.tsx  DeepResearchPanel.tsx  DocumentView.tsx  DropOverlay.tsx  Editor.tsx  ErrorBoundary.tsx  FileTree.tsx  GraphView.tsx  Guide.tsx  HtmlView.tsx  MarkdownView.tsx  MediaView.tsx  Modal.tsx  Overlay.tsx  PdfThumb.tsx  PdfView.tsx  Preview.tsx  PreviewCard.tsx  RtfView.tsx  SearchPanel.tsx  SearchSurface.tsx  SettingsModal.tsx  StatusBar.tsx  SyncModal.tsx  TagList.tsx  TasksModal.tsx  TopBar.tsx  fileDrag.ts  panelDrag.ts  previewTriggers.test.ts  previewTriggers.ts  useApplyTheme.ts  usePdfEditor.ts
src/lib/: activity.test.ts  activity.ts  agent.test.ts  agent.ts  agentBackup.test.ts  agentBackup.ts  daily.test.ts  daily.ts  deepResearch.test.ts  deepResearch.ts  deepResearchRun.test.ts  deepResearchRun.ts  devLauncherContract.test.ts  deviceName.test.ts  deviceName.ts  editorLoadContract.test.ts  faces.test.ts  faces.ts  fsnames.test.ts  fsnames.ts  graph.perf.test.ts  graph.test.ts  graph.ts  graphWindowBootstrap.test.ts  (+68 more)
